--- a/Web/Default.cshtml
+++ b/Web/Default.cshtml
@@ -66,7 +66,7 @@
 
 			<div class="info-wrp cm-item">
 				<h2 class="main-text">Dersler Bulutta...</h2>
-				<p class="sub-text">Sanal sınıfını bulutta oluştur, dosyaları paylaş, ödevleri yönet...</p>
+				<p class="sub-text">Derslerin için web sayfalarını bulutta oluştur, dosyaları paylaş, ödevlerini yönet...</p>
 			    <a href="@Href("~/Hesap/Yeni")" class="btn btn-default btn2">Yeni Öğrenci Hesabı</a>
                 <a href="@Href("~/Hesap/YeniEgitmen")" class="btn btn-default btn2">Yeni Eğitmen Hesabı</a>
 				<a href="@Href("~/Hesap/Giris")" class="btn btn-default btn2">Giriş</a>
@@ -86,7 +86,7 @@
 					<h2 class="title medium">BulutDers Nedir ?</h2>
 				</div>
 				<div class="col-md-6 col-md-offset-1 r">
-					<p>BulutDers, bulut teknolojisini ders süreçleri içerisine entegre eden çevrimiçi bir hizmettir.  Bulutders ile eğitmenler ders dökümanlarını bulutta depolayıp öğrencilerine paylaşıma açabilir, çevrimiçi ödevler vererek öğrenci gönderilerini değerlendirebilir, öğrencileriyle zamandan ve mekandan bağımsız olarak gerçek zamanlı olarak iletişim kurabilirler. </p>
+					<p>Bulutders ile eğitmenler yürüttükleri dersler için sayfalar oluşturarak ders materyallerini öğrencileriyle paylaşabilir, çevrimiçi ödevler vererek öğrenci gönderilerini değerlendirebilir, öğrencileriyle zamandan ve mekandan bağımsız olarak gerçek zamanlı olarak iletişim kurabilirler. </p>
 				</div>
 			</div><!-- / row -->
 		</div><!-- / container -->
@@ -124,7 +124,7 @@
 					<div class="info-box info-box4">
 						<div class="img"><i class="fa fa-lock"></i></div>
 						<div class="info">
-							<h2 class="hd">Döküman Erişim Kontrolü</h2>
+							<h2 class="hd">Dosya Erişim Kontrolü</h2>
 							<p class="sub-txt">Eğitmenler ders materyallerine olan erişimi kontrol edebilirler.</p>
 						</div>
 					</div><!-- /.info-box -->
