--- a/Panel/Default.cshtml
+++ b/Panel/Default.cshtml
@@ -90,14 +90,23 @@
 }
 
 <div class="row"> 
-    <div class="col-lg-12">                  @if (roller.Contains("Ogretici"))                   {
-                       <button class="btn btn-azure shiny btn-lg" data-toggle="modal" data-target="#modalDosyaEkle" title="Dosya Paylaş" data-toggle="tooltip" data-placement="top"><i class="fa fa-file fa-fw"></i> Dosya Paylaş </button>
-                       <button class="btn btn-info btn-lg shiny" data-toggle="modal" data-target="#modalDuyuruYap"><i class="fa fa-clipboard fa-fw"></i> Duyuru Ekle </button>
-                       <button class="btn btn-warning btn-lg shiny" data-toggle="modal" data-target="#modalYeniOdevVer"><i class="fa fa-tasks fa-fw"></i> Ödev Ver </button>
-                       <button class="btn btn-palegreen btn-lg shiny" data-toggle="modal" data-target="#modalDersEkle"><i class="fa fa-book fa-fw"></i> Ders Sayfası Oluştur </button>
+    <div class="col-lg-12">        
+                            <div class="dropdown">
+
+                        
+                                  <button id="dLabel" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="btn btn-primary btn-lg shiny">
+                                    <i class="fa fa-plus-circle fa-2x"></i>
+                                    <span class="caret"></span>
+                                  </button>
+                                                    @if (roller.Contains("Ogretici"))                       {
+                       
+                               <ul class="dropdown-menu" aria-labelledby="dLabel">                                          <li><a href="#" data-toggle="modal" data-target="#modalDosyaEkle" title="Dosya Paylaş" data-toggle="tooltip" data-placement="top"><i class="fa fa-file fa-fw"></i> Dosya Paylaş </a></li>                                          <li><a href="#" data-toggle="modal" data-target="#modalDuyuruYap"><i class="fa fa-clipboard fa-fw"></i> Duyuru Ekle </a></li>                                          <li><a href="#" data-toggle="modal" data-target="#modalYeniOdevVer"><i class="fa fa-tasks fa-fw"></i> Ödev Ver </a></li>                                          <li><a href="#" data-toggle="modal" data-target="#modalDersEkle"><i class="fa fa-book fa-fw"></i> Ders Sayfası Oluştur </a></li>                                          </ul>   
+                       
+                       
                      
-                   }        @if (roller.Contains("Ogrenci")) {                       <button class="btn btn-warning shiny btn-lg" data-toggle="modal" data-target="#modalDerseKatil" title="Erişim Kodu Kullanarak Bir Ders Sayfasını Takip Et" data-toggle="tooltip" data-placement="top"><i class="fa fa-plus-circle"></i> Erişim Kodu Kullanarak Bir Ders Sayfasını Takip Et </button>
-                       <button class="btn btn-info btn-lg shiny" id="btnDerseKatilDersAra"><i class="fa fa-search"></i> Ders Sayfası Ara </button>            }                   <br><br>
+                       }
+                      @if (roller.Contains("Ogrenci"))                             {                            <ul class="dropdown-menu" aria-labelledby="dLabel">                                 <li><a href="#" data-toggle="modal" data-target="#modalDerseKatil" title="Erişim Kodu Kullanarak Bir Ders Sayfasını Takip Et" data-toggle="tooltip" data-placement="top"><i class="fa fa-plus-circle"></i> Erişim Kodu Kullanarak Bir Ders Sayfasını Takip Et </a></li>
+                                 <li><a href="#" id="btnDerseKatilDersAra"><i class="fa fa-search"></i> Ders Sayfası Ara </a></li>                            </ul>                            }                    </div>                       <br><br>
     <div class="widget">
                <div class="widget-header bordered-top bordered-blueberry">
                                             
