--- a/Ajax/Ders/DersAyarKaydet.cshtml
+++ b/Ajax/Ders/DersAyarKaydet.cshtml
@@ -14,37 +14,26 @@
     // Gelen değerler boş ise hata kodu döndür.
     if (string.IsNullOrEmpty(DersID) || string.IsNullOrEmpty(alan) || string.IsNullOrEmpty(deger))
      {
-    
        Response.StatusCode=500;
        Response.End();
      }
 
     var db=Database.Open("fb1ae");
  
-    // Ders bilgilerini veritabanından oku.
-    var queryDers=db.QuerySingle("SELECT * FROM Ders WHERE DersID=@0 AND UserID=@1 AND Silindi=0",DersID,WebSecurity.CurrentUserId);
+    var queryIslem=db.QueryValue("exec dbo.Ders_AyarKaydet @0,@1,@2,@3",WebSecurity.CurrentUserId,DersID,alan,deger);
 
-   if (queryDers==null)
-    {
-      db.Close();
-      Response.StatusCode=502;
-      Response.End();   
-    }
-
-
-    // Eğer kullanıcı dersin sahibi değilse bu işlemi yapmaya izni yok hata kodu döndür.
-    if (WebSecurity.CurrentUserId!=queryDers.UserID)
+    if (queryIslem=="OK")
     {
         db.Close();
-        Response.StatusCode=400;
+        Response.Write("OK");
+        Response.End();    
+    }
+    else
+    {
+        db.Close();
+        Response.StatusCode=501;
         Response.End();
     }
-
-    // Ders bilgilerini yeni değerlerle güncelle
-     db.Execute("UPDATE Ders SET " + alan  +"=@0 WHERE DersID=@1",deger,DersID);
-     db.Close();
-     Response.Write("OK");
-     Response.End();
      
     
 }
