--- a/Ajax/Aktivite/Begen.cshtml
+++ b/Ajax/Aktivite/Begen.cshtml
@@ -22,28 +22,20 @@
      var db=Database.Open("fb1ae");
      
 
+     var queryIslem=db.QueryValue("exec dbo.Aktivite_Begen @0,@1",WebSecurity.CurrentUserId,aktiviteID);
 
-     //Aktivite bilgilerini veritabanından oku
-     var queryAktivite=db.QuerySingle("SELECT * FROM Aktivite WHERE AktiviteID=@0",aktiviteID);
-   
-        // Kullanıcı daha önce bu aktiviteyi beğenmiş mi kontrol et
-        if (db.QueryValue("SELECT COUNT(*) FROM AktiviteBegeni WHERE UserID=@0 AND AktiviteID=@1",WebSecurity.CurrentUserId,aktiviteID)<1)
-        {
-            // Beğeniyi ekle
-            db.Execute("INSERT INTO AktiviteBegeni(AktiviteID,UserID) VALUES(@0,@1)",aktiviteID,WebSecurity.CurrentUserId);
-
-           // Beğeni için bir bildirim oluştur.
-            db.Execute("INSERT INTO Bildirim(Url,EylemiYapanUserID,IliskiliOge,EylemID,DersID) VALUES(@0,@1,@2,@3,@4)","~/Ders/?DersID=" + queryAktivite.DersID,WebSecurity.CurrentUserId,"aktbgn" + aktiviteID.ToString(),1,queryAktivite.DersID);
-            var eklenenBildirimID=db.GetLastInsertId();
-            // Bu bildirimi dersin sahibi ve takipçileri görebilecek.
-            db.Execute("INSERT INTO BildirimOkunmasiGereken(UserID,BildirimID) (SELECT UserID,@0 FROM DersTakip WHERE DersID=@1 AND Durum=2 UNION SELECT UserID,@0 FROM Ders WHERE DersID=@1)",eklenenBildirimID,queryAktivite.DersID);
-           
-         }
-        
-        //Herşey tamam. OK mesajı döndür
+    if (queryIslem=="OK")
+    {
         db.Close();
         Response.Write("OK");
-        Response.End(); 
+        Response.End();    
+    }
+    else
+    {
+        db.Close();
+        Response.StatusCode=501;
+        Response.End();
+    }
 }
 
 
