--- a/Ajax/Bildirim/OkunduOlarakIsaretle.cshtml
+++ b/Ajax/Bildirim/OkunduOlarakIsaretle.cshtml
@@ -5,11 +5,22 @@
         Response.End();
         
     }
- var db=Database.Open("fb1ae");
+ 
  var bildirimID=Request["BildirimID"];
- db.Execute("DELETE FROM BildirimOkunmasiGereken WHERE UserID=@0 AND BildirimID=@1",WebSecurity.CurrentUserId,bildirimID);
- db.Close();
- Response.Write("OK");
- Response.End();
+ var db=Database.Open("fb1ae");
+ var queryIslem=db.QueryValue("exec dbo.Bildirim_OkunduOlarakIsaretle @0,@1",WebSecurity.CurrentUserId,bildirimID);
+
+    if (queryIslem=="OK")
+    {
+        db.Close();
+        Response.Write("OK");
+        Response.End();    
+    }
+    else
+    {
+        db.Close();
+        Response.StatusCode=501;
+        Response.End();
+    }
 }
 
