--- a/Shared/_LayoutYeni.cshtml
+++ b/Shared/_LayoutYeni.cshtml
@@ -637,7 +637,7 @@
 
                             <i class="fa fa-home"></i>
 
-                            <a href="#">@Resources.Resource.lblAnasayfa</a>
+                            <a href="@Href("~/Panel")">@Resources.Resource.lblAnasayfa</a>
 
                         </li>
 
