--- a/Ajax/DersTakip/Onayla.cshtml
+++ b/Ajax/DersTakip/Onayla.cshtml
@@ -26,27 +26,20 @@
      }
 
      
-       var db=Database.Open("fb1ae");
-       using (db)
-       {
+    var db=Database.Open("fb1ae");
+    var queryIslem=db.QueryValue("exec dbo.DersTakip_Onayla @0,@1,@2",WebSecurity.CurrentUserId,UserID,DersID);
 
-           //aktif kullanici dersin sahibi mi ?
-           if (db.QueryValue("SELECT COUNT(*) FROM Ders WHERE DersID=@0 AND UserID=@1",DersID,WebSecurity.CurrentUserId)<1)
-           {
-               db.Close();
-               Response.StatusCode=500;
-               Response.End();
-           }
-
-           db.Execute("UPDATE DersTakip SET Durum=2,OnayTarihi=@2 WHERE DersID=@0 AND UserID=@1",DersID,UserID,DateTime.Now);
-           db.Execute("UPDATE Bildirim SET Silindi=1 WHERE IliskiliOge=@0","drsistg" + UserID.ToString() + DersID.ToString());
-           var queryOgrenci=db.QuerySingle("SELECT * FROM Profiles WHERE UserID=@0",UserID);
-
-           db.Close();   
-           Response.Write("OK");
-           Response.End();
-
-
-       }
+    if (queryIslem=="OK")
+    {
+        db.Close();
+        Response.Write("OK");
+        Response.End();    
+    }
+    else
+    {
+        db.Close();
+        Response.StatusCode=501;
+        Response.End();
+    }
 }
 
