--- a/Ajax/DersTakip/TakibiBirak.cshtml
+++ b/Ajax/DersTakip/TakibiBirak.cshtml
@@ -24,28 +24,21 @@
            Response.End();
        }
 
-       var db=Database.Open("fb1ae");
-       using (db)
-       {
+    var db=Database.Open("fb1ae");
 
+    var queryIslem=db.QueryValue("exec dbo.DersTakip_TakibiBirak @0,@1",WebSecurity.CurrentUserId,DersID);
 
-           if (db.QueryValue("SELECT COUNT(*) FROM DersTakip WHERE DersID=@0 AND UserID=@1 AND Durum=2",DersID,WebSecurity.CurrentUserId)<1)
-           {
-               db.Close();
-               Response.StatusCode=500;
-               Response.End();
-           }
-
-           db.Execute("DELETE FROM DersTakip WHERE DersID=@0 AND UserID=@1",DersID,WebSecurity.CurrentUserId);
-          
-           var queryDers=db.QuerySingle("SELECT * FROM Ders WHERE DersID=@0",DersID);
-           db.Execute("INSERT INTO Bildirim(Url,EylemiYapanUserID,EylemID,DersID) VALUES(@0,@1,@2,@3)","~/",WebSecurity.CurrentUserId,6,DersID);
-           var eklenenBildirimID=db.GetLastInsertId();
-           db.Execute("INSERT INTO BildirimOkunmasiGereken(UserID,BildirimID) VALUES(@0,@1)",queryDers.UserID,eklenenBildirimID); 
-             
-           db.Close();   
-           Response.Write("OK");
-           Response.End();
-       }
-}
+    if (queryIslem=="OK")
+    {
+        db.Close();
+        Response.Write("OK");
+        Response.End();    
+    }
+    else
+    {
+        db.Close();
+        Response.StatusCode=501;
+        Response.End();
+    }
+  }
 
